cpp/test/Slice/errorDetection/OptionalParams.err
OptionalParams.ice:20: missing tag
OptionalParams.ice:21: missing tag
OptionalParams.ice:22: `abc' is not defined
OptionalParams.ice:23: tag is out of range
OptionalParams.ice:24: tag is out of range
OptionalParams.ice:25: tag is out of range
OptionalParams.ice:27: tag is out of range
OptionalParams.ice:27: invalid tag `C3'
OptionalParams.ice:28: tag is out of range
OptionalParams.ice:28: invalid tag `C4'
OptionalParams.ice:29: invalid tag `C5'
OptionalParams.ice:32: syntax error
OptionalParams.ice:34: missing tag
OptionalParams.ice:35: missing tag
OptionalParams.ice:36: `abc' is not defined
OptionalParams.ice:37: tag is out of range
OptionalParams.ice:38: tag is out of range
OptionalParams.ice:39: tag is out of range
OptionalParams.ice:41: tag is out of range
OptionalParams.ice:41: invalid tag `C3'
OptionalParams.ice:42: tag is out of range
OptionalParams.ice:42: invalid tag `C4'
OptionalParams.ice:43: invalid tag `C5'
OptionalParams.ice:45: warning: referencing enumerator `::Test::E::e2' without its enumeration's scope is deprecated
OptionalParams.ice:47: missing tag
OptionalParams.ice:48: missing tag
OptionalParams.ice:49: `abc' is not defined
OptionalParams.ice:50: tag is out of range
OptionalParams.ice:51: tag is out of range
OptionalParams.ice:52: tag is out of range
OptionalParams.ice:54: tag is out of range
OptionalParams.ice:54: invalid tag `C3'
OptionalParams.ice:55: tag is out of range
OptionalParams.ice:55: invalid tag `C4'
OptionalParams.ice:56: invalid tag `C5'
OptionalParams.ice:58: enumerator `e1' could designate `::Test::E::e1' or `::Test::Ebis::e1'
OptionalParams.ice:62: tag for parameter `o' is already in use
OptionalParams.ice:63: tag for parameter `o' is already in use
OptionalParams.ice:64: tag for parameter `o' is already in use
OptionalParams.ice:65: tag for parameter `o' is already in use
OptionalParams.ice:67: The `optional' keyword is deprecated, use `tag' instead
OptionalParams.ice:68: The `optional' keyword is deprecated, use `tag' instead
OptionalParams.ice:69: The `optional' keyword is deprecated, use `tag' instead
